# jobWebScraper

./: Dockerfile  docker-compose.yaml  gradireland_scraper.py  pyproject.toml  requirements.txt  scraper.py  train_model.py
data/: gradireland_jobs.json
