[tool.poetry]
name = "jobwebscraper"
version = "0.1.0"
description = ""
authors = ["Erenco19 <erenbasaran50@gmail.com>"]
readme = "README.md"
packages = [{include = "jobwebscraper"}]  # Optional: if your code is inside a folder

[tool.poetry.dependencies]
python = ">=3.9"
requests = "^2.32.3"
beautifulsoup4 = "^4.13.4"
selenium = "^4.31.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
