[tool.poetry]
name = "jobwebscraper"
version = "0.1.0"
description = ""
authors = ["Erenco19 <erenbasaran50@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
requests = "^2.32.3"
beautifulsoup4 = "^4.13.4"
selenium = "^4.31.0"
transformers = "^4.51.3"
datasets = "^2.19.0"
scikit-learn = "^1.6.1"
torch = "^2.7.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
